--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -33,6 +33,7 @@ target_link_libraries(matrix_malos_zmq ${ZMQ_LIB} ${CMAKE_THREAD_LIBS_INIT})
 
 set(matrix_malos_src
   malos_base.cpp malos_base.h
+  driver_manager.cpp driver_manager.h
   ${MALOS_PROTO_SRC} ${MALOS_PROTO_HEADER}
 )
 
@@ -47,6 +48,7 @@ install(TARGETS matrix_malos DESTINATION lib)
 
 set (matrix_malos_headers
   malos_base.h
+  driver_manager.h
   zmq_pull.h
   zmq_push.h
 )
