--- a/debian/control
+++ b/debian/control
@@ -16,6 +16,6 @@ Description: Libraries of MATRIX abstraction layer for MOS
 Package: libmatrix-malos-dev
 Section: libdevel
 Architecture: any
-Depends: libmatrix-malos-lib  (= ${binary:Version}), libc6-dev | libc-dev, ${misc:Depends}
+Depends: libmatrix-malos  (= ${binary:Version}), libc6-dev | libc-dev, ${misc:Depends}
 Description:  Libraries of MATRIX abstraction layer for MOS
 
