--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -32,9 +32,10 @@ set(matrix_malos_src
 )
 
 add_library(matrix_malos ${matrix_malos_src})
-set_property(TARGET matrix_malos PROPERTY CXX_STANDARD 11)
-target_link_libraries(matrix_malos matrix_malos_zmq)
-target_link_libraries(matrix_malos ${CMAKE_THREAD_LIBS_INIT})
+  set_property(TARGET matrix_malos PROPERTY CXX_STANDARD 11)
+  target_link_libraries(matrix_malos matrix_malos_zmq)
+  target_link_libraries(matrix_malos matrixio_protos)
+  target_link_libraries(matrix_malos ${CMAKE_THREAD_LIBS_INIT})
 
 # Binary to be installed.
 install(TARGETS matrix_malos_zmq DESTINATION lib)
