--- a/debian/control
+++ b/debian/control
@@ -10,7 +10,7 @@ Package: libmatrix-malos
 Architecture: any
 Multi-Arch: same
 Pre-Depends: ${misc:Pre-Depends}
-Depends: ${shlibs:Depends}, ${misc:Depends},libzmq3-dev,protobuf,libmatrixio-protos
+Depends: ${shlibs:Depends}, ${misc:Depends},libzmq3-dev,protobuf,libmatrixio-protos,libmatrixio-protos-dev
 Description: Libraries of MATRIX abstraction layer for MOS
 
 Package: libmatrix-malos-dev
