--- a/debian/control
+++ b/debian/control
@@ -1,4 +1,4 @@
-Source: libmatrix-malos
+Source: libmatrixio-malos
 Section: libs
 Priority: optional
 Maintainer: Admobilize <info@admobilize.com>
@@ -6,14 +6,14 @@ Build-Depends: debhelper (>= 9)
 Standards-Version: 3.9.5
 Homepage: https://github.com/matrix-io/matrix-malos-lib
 
-Package: libmatrix-malos
+Package: libmatrixio-malos
 Architecture: any
 Multi-Arch: same
 Pre-Depends: ${misc:Pre-Depends}
 Depends: ${shlibs:Depends}, ${misc:Depends},libzmq3-dev,protobuf,libmatrixio-protos,libmatrixio-protos-dev
 Description: Libraries of MATRIX abstraction layer for MOS
 
-Package: libmatrix-malos-dev
+Package: libmatrixio-malos-dev
 Section: libdevel
 Architecture: any
 Depends: libmatrix-malos  (= ${binary:Version}), libc6-dev | libc-dev, ${misc:Depends}
