--- a/.drone.yml
+++ b/.drone.yml
@@ -68,10 +68,10 @@ matrix:
     - CODENAME: jessie
       DISTRIBUTION: raspbian
       MOUNTOFFSET: 48234496
-      MOUNTDIR: /drone/src/github.com/matrix-io/matrix-malos-lib
+      MOUNTDIR: /drone/src/bitbucket.org/admobilize/matrix-malos-lib
       MOUNTIMG: https://storage.googleapis.com/raspbian-images/2017-07-05-raspbian-jessie-debuild.img.gz
     - CODENAME: stretch
       MOUNTOFFSET: 48234496
-      MOUNTDIR: /drone/src/github.com/matrix-io/matrix-malos-lib
+      MOUNTDIR: /drone/src/bitbucket.org/admobilize/matrix-malos-lib
       DISTRIBUTION: raspbian
       MOUNTIMG: https://storage.googleapis.com/raspbian-images/2017-08-16-raspbian-stretch-debuild.img.gz
