--- a/.drone.yml
+++ b/.drone.yml
@@ -1,7 +1,8 @@
 pipeline:
   build-debs:
     when:
-      event: tag
+      branch: master
+      event: [ push, pull_request, tag ]
     image: gcr.io/admobilize-testing/builder-qemu:latest
     privileged: true
     mountimg: ${MOUNTIMG}
@@ -10,13 +11,14 @@ pipeline:
       curl https://apt.matrix.one/doc/apt-key.gpg | apt-key add -
       echo "deb https://apt.matrix.one/raspbian ${CODENAME} main" > /etc/apt/sources.list.d/matrixlabs.list
       apt-get update
-      apt-get install --yes libzmq3-dev matrixio-protobuf libmatrixio-protos libmatrixio-protos-dev
+      apt-get install --yes libzmq3-dev libmatrixio-protos libmatrixio-protos-dev
       debuild -us -uc -b
       mv ../*.deb .
 
   upload-debs:
     when:
-      event: tag
+      branch: master
+      event: [ push, pull_request, tag ]
     image: gcr.io/admobilize-testing/gce-builder:latest
     secrets: [aws_access_key_id, aws_secret_access_key, gpg_key, gpg_pass]
     commands:
@@ -24,54 +26,50 @@ pipeline:
       - echo "$${GPG_KEY}" > /tmp/tmpkey && gpg --import /tmp/tmpkey && rm /tmp/tmpkey
       - echo "personal-digest-preferences SHA512" >> /root/.gnupg/gpg.conf
 
+      # Only TAG events are published to main
+      - export COMPONENT=$([ "${DRONE_BUILD_EVENT}" = "tag" ] && echo "main" || echo "unstable")
+      - export PKG_VER=$(dpkg-parsechangelog --show-field Version -ldebian/changelog)
+
       # Upload packages
-      - mv libmatrixio-malos_${DRONE_TAG##v}_armhf.deb 
-           libmatrixio-malos_${DISTRIBUTION}-${CODENAME}-${DRONE_TAG##v}_armhf.deb
-      - mv libmatrixio-malos-dev_${DRONE_TAG##v}_armhf.deb
-           libmatrixio-malos-dev_${DISTRIBUTION}-${CODENAME}-${DRONE_TAG##v}_armhf.deb
+      - mv libmatrixio-malos_$${PKG_VER}_armhf.deb 
+           libmatrixio-malos_${DISTRIBUTION}-${CODENAME}-$${PKG_VER}_armhf.deb
+      - mv libmatrixio-malos-dev_$${PKG_VER}_armhf.deb
+           libmatrixio-malos-dev_${DISTRIBUTION}-${CODENAME}-$${PKG_VER}_armhf.deb
 
       - echo "$${GPG_PASS}" | deb-s3 upload --bucket apt.matrix.one 
         --prefix $DISTRIBUTION
+        --component $COMPONENT
         --codename $CODENAME
         --access-key-id $${AWS_ACCESS_KEY_ID}
         --secret-access-key $${AWS_SECRET_ACCESS_KEY}
         --sign info@matrix.one 
         --gpg-options="--batch --passphrase-fd 0"
-        libmatrixio-malos_${DISTRIBUTION}-${CODENAME}-${DRONE_TAG##v}_armhf.deb
-        libmatrixio-malos-dev_${DISTRIBUTION}-${CODENAME}-${DRONE_TAG##v}_armhf.deb
+        libmatrixio-malos_${DISTRIBUTION}-${CODENAME}-$${PKG_VER}_armhf.deb
+        libmatrixio-malos-dev_${DISTRIBUTION}-${CODENAME}-$${PKG_VER}_armhf.deb
 
-  notify-always:
+      # Render the notification template for the notify-slack step
+      - j2 --var-delimiter '%%' .drone/slack.tpl > notification.tpl
+
+  notify-slack:
     image: plugins/slack
     secrets: [slack_webhook]
     username: drone-ci-builder
     channel: notifications
     when:
       status: [ success, failure ]
-      event: tag 
-    template: |
-      {{#success build.status}}
-        {{build.author}} just built `{{repo.name}}:{{build.branch}}` from <${DRONE_COMMIT_LINK}|#{{truncate build.commit 8}}>
-        :new: {{build.message}}
-        :debian: The new `libmatrixio-malos_${DISTRIBUTION}-${CODENAME}-${DRONE_TAG##v}_armhf.deb` was published to apt.matrix.one
-        :debian: The new `libmatrixio-malos-dev_${DISTRIBUTION}-${CODENAME}-${DRONE_TAG##v}_armhf.deb` was published to apt.matrix.one
-      {{else}}
-        {{build.author}} just broke the build of `{{repo.name}}:{{build.branch}}` with <${DRONE_COMMIT_LINK}|#{{truncate build.commit 8}}>
-        :new: :zombie: {{build.message}}
-        :debian: The package `libmatrixio-malos_${DISTRIBUTION}-${CODENAME}-${DRONE_TAG##v}_armhf.deb` failed to build.
-        :debian: The package `libmatrixio-malos-dev_${DISTRIBUTION}-${CODENAME}-${DRONE_TAG##v}_armhf.deb` failed to build.
-      {{/success}}
-      :stopwatch: {{ since build.started}}
-      :gear: {{build.link}}
+      branch: master
+      event: [push, pull_request, tag]
+    template: file:///drone/src/github.com/matrix-io/matrix-malos-lib/notification.tpl
 
 matrix:
   include: 
     - CODENAME: jessie
       DISTRIBUTION: raspbian
       MOUNTOFFSET: 48234496
-      MOUNTDIR: /drone/src/bitbucket.org/admobilize/matrix-malos-lib
+      MOUNTDIR: /drone/src/github.com/matrix-io/matrix-malos-lib
       MOUNTIMG: https://storage.googleapis.com/raspbian-images/2017-07-05-raspbian-jessie-debuild.img.gz
     - CODENAME: stretch
       MOUNTOFFSET: 48234496
-      MOUNTDIR: /drone/src/bitbucket.org/admobilize/matrix-malos-lib
+      MOUNTDIR: /drone/src/github.com/matrix-io/matrix-malos-lib
       DISTRIBUTION: raspbian
       MOUNTIMG: https://storage.googleapis.com/raspbian-images/2017-08-16-raspbian-stretch-debuild.img.gz
