--- a/.drone.yml
+++ b/.drone.yml
@@ -9,7 +9,8 @@ pipeline:
     mountoffset: ${MOUNTOFFSET}
     body: |
       curl https://apt.matrix.one/doc/apt-key.gpg | apt-key add -
-      echo "deb https://apt.matrix.one/raspbian ${CODENAME} main" > /etc/apt/sources.list.d/matrixlabs.list
+      export COMPONENT=$([ "${DRONE_BUILD_EVENT}" = "tag" ] && echo "main" || echo "unstable")
+      echo "deb https://apt.matrix.one/raspbian ${CODENAME} $COMPONENT" > /etc/apt/sources.list.d/matrixlabs.list
       apt-get update
       apt-get install --yes libzmq3-dev libmatrixio-protos libmatrixio-protos-dev
       debuild -us -uc -b
