--- a/.drone.yml
+++ b/.drone.yml
@@ -2,7 +2,7 @@ pipeline:
   build-debs:
     when:
       branch: master
-      event: [ push, pull_request, tag ]
+      event: [ push, tag ]
     image: gcr.io/admobilize-testing/builder-qemu:latest
     privileged: true
     mountimg: ${MOUNTIMG}
@@ -12,14 +12,14 @@ pipeline:
       export COMPONENT=$([ "${DRONE_BUILD_EVENT}" = "tag" ] && echo "main" || echo "unstable")
       echo "deb https://apt.matrix.one/raspbian ${CODENAME} $COMPONENT" > /etc/apt/sources.list.d/matrixlabs.list
       apt-get update
-      apt-get install --yes libzmq3-dev libmatrixio-protos libmatrixio-protos-dev
+      apt-get install --yes libzmq3-dev libmatrixio-protos-dev
       debuild -us -uc -b
       mv ../*.deb .
 
   upload-debs:
     when:
       branch: master
-      event: [ push, pull_request, tag ]
+      event: [ push, tag ]
     image: gcr.io/admobilize-testing/gce-builder:latest
     secrets: [aws_access_key_id, aws_secret_access_key, gpg_key, gpg_pass]
     commands:
@@ -59,7 +59,7 @@ pipeline:
     when:
       status: [ success, failure ]
       branch: master
-      event: [push, pull_request, tag]
+      event: [push, tag]
     template: file:///drone/src/github.com/matrix-io/matrix-malos-lib/notification.tpl
 
 matrix:
