--- a/debian/control
+++ b/debian/control
@@ -3,7 +3,7 @@ Section: libs
 Replaces: libmatrix-malos
 Priority: optional
 Maintainer: MATRIX Labs <info@matrix.one>
-Build-Depends: debhelper (>= 9)
+Build-Depends: debhelper (>= 9), libzmq3-dev, libmatrixio-protos-dev
 Standards-Version: 3.9.5
 Homepage: https://github.com/matrix-io/matrix-malos-lib
 
@@ -13,7 +13,7 @@ Multi-Arch: same
 Conflicts: libmatrix-malos
 Replaces: libmatrix-malos
 Pre-Depends: ${misc:Pre-Depends}
-Depends: ${shlibs:Depends}, ${misc:Depends},libzmq3-dev,libmatrixio-protos,libmatrixio-protos-dev
+Depends: ${shlibs:Depends}, ${misc:Depends},libzmq3-dev,libmatrixio-protos
 Description: Libraries of MATRIX abstraction layer for MOS
 
 Package: libmatrixio-malos-dev
