--- a/debian/control
+++ b/debian/control
@@ -13,7 +13,7 @@ Multi-Arch: same
 Conflicts: libmatrix-malos
 Replaces: libmatrix-malos
 Pre-Depends: ${misc:Pre-Depends}
-Depends: ${shlibs:Depends}, ${misc:Depends},libzmq5,libmatrixio-protos
+Depends: ${shlibs:Depends}, ${misc:Depends},libzmq3-dev,libmatrixio-protos
 Description: Libraries of MATRIX abstraction layer for MOS
 
 Package: libmatrixio-malos-dev
