Remove expression from the else and endif

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -17,7 +17,7 @@ FIND_LIBRARY(MATRIX_PROTOS_LIB NAMES matrixio_protos)
 if (MSVC)
   FIND_PATH(ZMQ_INCLUDE_DIR NAMES zmq.hpp)
   FIND_PATH(MATRIX_PROTOS_INCLUDE_DIR NAMES matrix_io/common/entity.pb.h)
-endif (MSVC)
+endif ()
 
 message(STATUS "ZMQ found => " "${ZMQ_LIB}")
 message(STATUS "Matrix Protos LIB found => " "${MATRIX_PROTOS_LIB}")
@@ -33,9 +33,9 @@ set(matrix_malos_zmq_src
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
 if (MSVC)
   add_library(matrix_malos_zmq ${matrix_malos_zmq_src})
-else (MSVC)
+else ()
   add_library(matrix_malos_zmq SHARED ${matrix_malos_zmq_src})
-endif (MSVC)
+endif ()
 set_property(TARGET matrix_malos_zmq PROPERTY CXX_STANDARD 11)
 target_link_libraries(matrix_malos_zmq ${ZMQ_LIB} ${CMAKE_THREAD_LIBS_INIT})
 
@@ -51,11 +51,11 @@ if (MSVC)
   include_directories(${ZMQ_INCLUDE_DIR})
   include_directories(${MATRIX_PROTOS_INCLUDE_DIR})
   include_directories(${PROTOBUF_INCLUDE_DIR})
-else (MSVC)
+else ()
   add_library(matrix_malos SHARED ${matrix_malos_src})
   set_property(TARGET matrix_malos PROPERTY CXX_STANDARD 11)
   target_link_libraries(matrix_malos matrix_malos_zmq)
-endif (MSVC)
+endif ()
 
   target_link_libraries(matrix_malos ${MATRIX_PROTOS_LIB})
   target_link_libraries(matrix_malos ${CMAKE_THREAD_LIBS_INIT})
