added optional source directories and changed matrix_malos to static

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -31,7 +31,13 @@ set(matrix_malos_src
   driver_manager.cpp driver_manager.h
 )
 
-add_library(matrix_malos SHARED ${matrix_malos_src})
+include_directories (
+  ${ZMQ_INCLUDE_DIRS} 
+  ${PROTOBUF_INCLUDE_DIR}
+  ${MATRIXIO_INCLUDE_DIRS}
+)
+
+add_library(matrix_malos STATIC ${matrix_malos_src})
   set_property(TARGET matrix_malos PROPERTY CXX_STANDARD 11)
   target_link_libraries(matrix_malos matrix_malos_zmq)
   target_link_libraries(matrix_malos matrixio_protos)
